[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-sensor-triage"
version = "1.0.0"
description = "IoT Sensor Triage OpenEnv Simulation"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pydantic",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
